0.524 2024-06-11
  [Requirement Changes]
    * Require IO::Socket::IP 0.42.
    * Require Perl v5.20.3.
  [New Features]
    * Add Test::SPVM::Sys::Socket module.
    * Add Test::SPVM::Sys::Socket::ServerManager module.
    * Add Test::SPVM::Sys::Socket::Util module.
    
0.523 2024-06-10

  [Test Fix]
    * Fix tests for Sys::Stat in Sys::Stat.

      A note about stat tests: SPVM::Sys uses MinGW's stat and fstat. On the other hand, Perl's implementation is based on Windows functions.

      Also, the implementation will probably change depending on whether the Perl version uses the new Windows C runtime UCRT or the old MSVCRT.

      This means that there is a high possibility of differences in the results.

      I don't want to fail the SPVM test because of a bug in Perl's stat and fstat and MinGW's stat and fstat and Windows's _stat and _fstat.

      So for Windows, write a low-confidence test: if the value matches Perl, pass. If it doesn't, print to standard error the expected value and the result.
      
0.522 2024-06-06
  [Requirement Changes]
    * Require SPVM::Resource::SocketUtil 1.002.
  [Internal Changes]
    * struct sockaddr_un is not defined because spvm_socket_util.h has it now.
  [Support Removal]
    * SPVM::Sys does not support 32bit systems.
    
0.521 2024-06-05
  [Requirement Changes]
    * Require SPVM 0.990006.
  [Internal Changes]
    * If SPVM_SOCKET_UTIL_DEFINE_SOCKADDR_UN macro is defined, struct sockaddr_un is not declared.
0.520 2024-06-03
  [Fix Warnings]
    * Fix unneeded warning in Sys::Socket#recvfrom method.
0.519 2024-06-03
  [Incompatible Changes]
    * Change an argument of Sys#recvfrom method.
      [Before]
      method recvfrom : int ($socket_fd : int, $buffer : mutable string, $length : int, $flags : int, $sockaddr : Sys::Socket::Sockaddr, $buffer_offset : int = 0);
      
      [After]