@@ -1747,6 +1747,8 @@ Searches a group entry given The group name $name. If found, returns the group e
 
 =over 2
 
+=item * L<Test::SPVM::Sys::Socket>
+
 =item * L<Test::SPVM::Sys::Socket::ServerManager>
 
 =item * L<Test::SPVM::Sys::Socket::ServerManager::IP>
